--- a/src/main/resources/config1.yml
+++ b/src/main/resources/config1.yml
@@ -1,7 +1,7 @@
 generalConfig:
   # minutes
   simulationTime:
-  - 60
+  - 30
   # minutes
   warmUpPeriod:
   - 3
@@ -12,8 +12,8 @@ generalConfig:
   fileLogEnabled: true
   deepFileLogEnabled: false
   minNumberOfMobileDevices: 100
-  maxNumberOfMobileDevices: 1100
-  mobileDeviceCounterSize: 500
+  maxNumberOfMobileDevices: 500
+  mobileDeviceCounterSize: 200
   # sec
   wanPropogationDelay:
   - 0.15
@@ -108,8 +108,8 @@ inputDeployConfig:
   actuatorDownloadData: 1.0
   behaviour:
     name: "behaviour"
-    probCloudSelection: [ 0.0, 50.0, 100.0 ]
-    poissonInterarrival: [1.0]
+    probCloudSelection: [ 50.0 ]
+    poissonInterarrival: [5.0]
     activePeriod: [1.0] # sec
     idlePeriod: [0.0] # sec
     vmUtilizationOnEdge: [30.0]
@@ -117,8 +117,8 @@ inputDeployConfig:
     vmUtilizationOnMobile: [0.0]
   communication:
     name: "communication"
-    probCloudSelection: [ 0.0, 50.0, 100.0 ]
-    poissonInterarrival: [ 1.0 ]
+    probCloudSelection: [ 50.0 ]
+    poissonInterarrival: [ 5.0 ]
     activePeriod: [ 20.0 ]
     idlePeriod: [ 0.0 ]
     taskLength: [ 15.0 ]
