--- a/src/main/resources/config1.yml
+++ b/src/main/resources/config1.yml
@@ -13,7 +13,7 @@ generalConfig:
   deepFileLogEnabled: false
   minNumberOfMobileDevices: 100
   maxNumberOfMobileDevices: 500
-  mobileDeviceCounterSize: 25
+  mobileDeviceCounterSize: 10
   # sec
   wanPropogationDelay:
     - 0.15
@@ -25,9 +25,9 @@ generalConfig:
   wlanBandwidth:
     - 200
   wanBandwidth:
-    - 200
+    - 15
   gsmBandwidth:
-    - 0
+    - 10
   numberOfHostOnCloudDatacenter:
     - 1
   numberOfVmOnCloudHost:
@@ -74,7 +74,7 @@ edgesConfig:
   edgeMips: 12000
   edgeRam: 16000
   edgeStorage: 250000
-  edgeVwCount: 8
+  edgeVwCount: 1
   locations:
     - x: 1
       y: 1
@@ -108,20 +108,20 @@ inputDeployConfig:
   actuatorDownloadData: 1.0
   behaviour:
     name: "behaviour"
-    probCloudSelection: [ 50.0 ]
+    probCloudSelection: [ 0.0, 25.0, 50.0, 75.0, 100.0 ]
     poissonInterarrival: [5.0]
     activePeriod: [20.0] # sec
     idlePeriod: [0.0] # sec
-    vmUtilizationOnEdge: [15.0]
-    vmUtilizationOnCloud: [2.0]
+    vmUtilizationOnEdge: [25.0]
+    vmUtilizationOnCloud: [4.0]
     vmUtilizationOnMobile: [0.0]
   communication:
     name: "communication"
-    probCloudSelection: [ 50.0 ]
+    probCloudSelection: [ 0.0, 25.0, 50.0, 75.0, 100.0 ]
     poissonInterarrival: [ 5.0 ]
     activePeriod: [ 20.0 ]
     idlePeriod: [ 0.0 ]
     taskLength: [ 15.0 ]
-    vmUtilizationOnEdge: [ 10.0 ]
-    vmUtilizationOnCloud: [ 2.0 ]
+    vmUtilizationOnEdge: [ 25.0 ]
+    vmUtilizationOnCloud: [ 4.0 ]
     vmUtilizationOnMobile: [ 0.0 ]
