--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -32,4 +32,20 @@ jobs:
       - uses: docker://mtmiller/octave:7.0.0
         with:
           args: octave plotAll.m
+      - name: create zip
+        run: tar -zcvf charts.tar.gz output/charts/
+      - name: Set git user name
+        run: |
+          git config user.name Andrea PLacuzzi
+          git config user.email andrea.placuzzi@studio.unibo.it
+      - name: Create tag
+        run: |
+          git clone --depth 1 https://github.com/DanySK/Gravis-CI.git ./gravis
+          ./gravis/autotag
+      - name: Create release
+        run: |
+          tag_name=v0.1 
+          hub release create -a charts.tar.gz -m "$tag_name" "$tag_name"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
